--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -14,6 +14,8 @@
     "editor.tabSize": 4,
     "explorer.autoReveal": false,
     "explorer.compactFolders": false,
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
     "explorer.openEditors.visible": 1,
     "files.associations": {
         "*.component": "html",
@@ -40,6 +42,9 @@
     "files.trimTrailingWhitespace": true,
     "problems.decorations.enabled": false,
     "search.quickOpen.includeHistory": false,
+    "security.allowedUNCHosts": [
+        "wsl.localhost"
+    ],
     "merge-conflict.autoNavigateNextConflict.enabled": true,
     "workbench.settings.editor": "json",
     "workbench.colorCustomizations": {
@@ -69,7 +74,5 @@
     "workbench.sideBar.location": "right",
     "security.workspace.trust.untrustedFiles": "open",
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Visual Studio Dark",
-    "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false
+    "workbench.colorTheme": "Visual Studio Dark"
 }
