--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -25,18 +25,7 @@
         "*.auradoc": "xml"
     },
     "files.exclude": {
-        // "**/*-meta.xml": true,
-        // "node_modules/": true,
-        "deployment-config/": true,
-        // ".vscode/": true,
-        ".circleci/": true,
-        ".grunt/": true,
-        "base64.js": true,
-        "_SpecRunner.html": true,
-        // "package.json": true,
-        "Readme.md": true,
-        "Gruntfile.js": true,
-        "PULL_REQUEST_TEMPLATE.md": true
+        "base64.js": true
     },
     "files.insertFinalNewline": true,
     "files.trimTrailingWhitespace": true,
