--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -17,5 +17,5 @@ blur = true
 option_as_alt = "Both"
 
 [font]
-normal.family = "MesloLGS Nerd Font Mono"
+normal.family = "MesloLGS Nerd Font"
 size = 16
