--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -9,7 +9,8 @@ TERM = "xterm-256color"
 padding.x = 10
 padding.y = 10
 
-decorations = "Buttonless"
+decorations = "None"
+# decorations = "Buttonless"
 
 opacity = 0.8
 blur = true
