--- a/other/kitty/kitty.conf
+++ b/other/kitty/kitty.conf
@@ -1,60 +1,94 @@
-#  _    _ _   _           _                      _             _
-# | | _(_) |_| |_ _   _  | |_ ___ _ __ _ __ ___ (_)_ __   __ _| |
-# | |/ / | __| __| | | | | __/ _ \ '__| '_ ` _ \| | '_ \ / _` | |
-# |   <| | |_| |_| |_| | | ||  __/ |  | | | | | | | | | | (_| | |
-# |_|\_\_|\__|\__|\__, |  \__\___|_|  |_| |_| |_|_|_| |_|\__,_|_|
-#                 |___/              _          _   _
-#   ___ _   _ ___| |_ ___  _ __ ___ (_)______ _| |_(_) ___  _ __
-#  / __| | | / __| __/ _ \| '_ ` _ \| |_  / _` | __| |/ _ \| '_ \
-# | (__| |_| \__ \ || (_) | | | | | | |/ / (_| | |_| | (_) | | | |
-#  \___|\__,_|___/\__\___/|_| |_| |_|_/___\__,_|\__|_|\___/|_| |_|
+# =============================================================================
+# Kitty Terminal Configuration
+# =============================================================================
+# A fast, feature-rich, GPU-accelerated terminal emulator
+# Documentation: https://sw.kovidgoyal.net/kitty/
 
-### Audio ###
-
+# =============================================================================
+# Audio Configuration
+# =============================================================================
+# Disable audio bell (visual bell only)
 enable_audio_bell no
 
-### Background ###
-
+# =============================================================================
+# Background Configuration
+# =============================================================================
+# Background blur effect (0-100)
 background_blur 1
+
+# Background opacity (0.0-1.0)
 background_opacity 1.0
 
-### Font ###
-
+# =============================================================================
+# Font Configuration
+# =============================================================================
+# Font family (uncomment and modify as needed)
 # font_family      monospace
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
 
+# Font size in points
 font_size 16.0
 
+# Symbol mapping for special characters
 # symbol_map PowerlineSymbols
 
-### Mouse ###
-
+# =============================================================================
+# Mouse Configuration
+# =============================================================================
+# Hide mouse cursor after specified time (in seconds)
 # mouse_hide_wait -1
+
+# Underline hyperlinks on hover
 underline_hyperlinks hover
 
-### Tab Bar Customization ###
+# =============================================================================
+# Tab Bar Customization
+# =============================================================================
+# Tab bar style
 tab_bar_style powerline
+
+# Powerline style for tabs
 tab_powerline_style slanted
+
+# Tab bar position
 tab_bar_edge bottom
+
+# Tab bar alignment
 tab_bar_align left
+
+# Tab font styles
 active_tab_font_style   bold
 inactive_tab_font_style normal
 
-### Themes ###
-
+# =============================================================================
+# Color Themes
+# =============================================================================
+# Include color theme files
 # include Everforest.conf
 include Everforest-Dark.conf
 # include Tokyo-Night.conf
 
-### Window ###
-
+# =============================================================================
+# Window Configuration
+# =============================================================================
+# Remember window size
 remember_window_size  no
+
+# Initial window dimensions
 initial_window_width  1200
 initial_window_height 750
+
+# Window border width
 window_border_width 1.5pt
+
+# Enabled layouts
 enabled_layouts tall
+
+# Window padding and margins
 window_padding_width 0
 window_margin_width 2
+
+# Window decorations
 hide_window_decorations no
