--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -1,42 +1,208 @@
 {
-    "diffEditor.ignoreTrimWhitespace": false,
+    // =============================================================================
+    // VS Code User Settings
+    // =============================================================================
+    // Personal configuration for Visual Studio Code
+    // Documentation: https://code.visualstudio.com/docs/getstarted/settings
+
+    // =============================================================================
+    // Editor Configuration
+    // =============================================================================
+    "editor.fontFamily": "Fira Code, 'Cascadia Code', 'JetBrains Mono', Consolas, 'Courier New', monospace",
+    "editor.fontSize": 16,
+    "editor.fontWeight": "500",
+    "editor.fontLigatures": true,
+    "editor.lineHeight": 1.5,
+    "editor.tabSize": 4,
+    "editor.insertSpaces": false,
+    "editor.detectIndentation": false,
+    "editor.wordWrap": "on",
     "editor.wordWrapColumn": 80,
+    "editor.rulers": [80, 120],
     "editor.cursorBlinking": "solid",
     "editor.cursorSmoothCaretAnimation": "on",
-    "editor.detectIndentation": false,
-    "editor.fontSize": 16,
-    "editor.inlineSuggest.suppressSuggestions": true,
-    "editor.insertSpaces": false,
-    "editor.fontFamily": "Fira Code",
-    "editor.fontLigatures": true,
-    "editor.fontWeight": "500",
+    "editor.cursorWidth": 2,
     "editor.minimap.enabled": false,
     "editor.renderWhitespace": "all",
-    "editor.tabSize": 4,
-    "explorer.autoReveal": false,
-    "explorer.compactFolders": false,
-    "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false,
-    "explorer.openEditors.visible": 1,
+    "editor.renderControlCharacters": true,
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs": true,
+    "editor.inlineSuggest.suppressSuggestions": true,
+    "editor.suggestSelection": "first",
+    "editor.acceptSuggestionOnEnter": "on",
+    "editor.tabCompletion": "on",
+    "editor.wordBasedSuggestions": "off",
+    "editor.parameterHints.enabled": true,
+    "editor.hover.delay": 300,
+    "editor.lightbulb.enabled": true,
+    "editor.codeLens": true,
+    "editor.folding": true,
+    "editor.foldingStrategy": "indentation",
+    "editor.showFoldingControls": "always",
+    "editor.unfoldOnClickAfterEnd": false,
+    "editor.smoothScrolling": true,
+    "editor.cursorSurroundingLines": 3,
+    "editor.cursorSurroundingLinesStyle": "all",
+    "editor.stickyScroll.enabled": true,
+
+    // =============================================================================
+    // File Management
+    // =============================================================================
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 1000,
+    "files.insertFinalNewline": true,
+    "files.trimTrailingWhitespace": true,
+    "files.trimFinalNewlines": true,
+    "files.encoding": "utf8",
+    "files.eol": "\n",
+    "files.watcherExclude": {
+        "**/.git/objects/**": true,
+        "**/.git/subtree-cache/**": true,
+        "**/node_modules/*/**": true,
+        "**/.hg/store/**": true,
+        "**/.svn/**": true,
+        "**/tmp/**": true,
+        "**/bower_components/**": true,
+        "**/dist/**": true,
+        "**/build/**": true
+    },
     "files.associations": {
         "*.component": "html",
         "*.cls": "apex",
         "*.page": "html",
         "*.app": "xml",
-        "*.auradoc": "xml"
+        "*.auradoc": "xml",
+        "*.env*": "dotenv",
+        "Dockerfile*": "dockerfile",
+        "docker-compose*.yml": "dockercompose",
+        "*.kdl": "kdl"
     },
     "files.exclude": {
-        "base64.js": true
+        "base64.js": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/*.pyc": true,
+        "**/__pycache__": true,
+        "**/node_modules": true,
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true
     },
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "problems.decorations.enabled": false,
+
+    // =============================================================================
+    // Explorer Configuration
+    // =============================================================================
+    "explorer.autoReveal": false,
+    "explorer.compactFolders": false,
+    "explorer.confirmDelete": false,
+    "explorer.confirmDragAndDrop": false,
+    "explorer.openEditors.visible": 1,
+    "explorer.sortOrder": "type",
+    "explorer.incrementalNaming": "smart",
+    "explorer.decorations.colors": true,
+    "explorer.decorations.badges": true,
+
+    // =============================================================================
+    // Search Configuration
+    // =============================================================================
     "search.quickOpen.includeHistory": false,
+    "search.useGlobalIgnoreFiles": true,
+    "search.useIgnoreFiles": true,
+    "search.smartCase": true,
+    "search.followSymlinks": false,
+    "search.exclude": {
+        "**/node_modules": true,
+        "**/bower_components": true,
+        "**/*.code-search": true,
+        "**/dist": true,
+        "**/build": true,
+        "**/.git": true
+    },
+
+    // =============================================================================
+    // Terminal Configuration
+    // =============================================================================
+    "terminal.integrated.fontFamily": "MesloLGS Nerd Font, 'Fira Code', 'Cascadia Code', 'JetBrains Mono', Consolas, 'Courier New', monospace",
+    "terminal.integrated.fontSize": 14,
+    "terminal.integrated.cursorBlinking": true,
+    "terminal.integrated.cursorStyle": "line",
+    "terminal.integrated.scrollback": 10000,
+    "terminal.integrated.copyOnSelection": true,
+    "terminal.integrated.rightClickBehavior": "copyPaste",
+    "terminal.integrated.enableMultiLinePasteWarning": false,
+
+    // =============================================================================
+    // Git Configuration
+    // =============================================================================
+    "git.enableSmartCommit": true,
+    "git.confirmSync": false,
+    "git.autofetch": true,
+    "git.autofetchPeriod": 180,
+    "git.decorations.enabled": true,
+    "git.showProgress": true,
+    "git.autoStash": true,
+    "git.allowCommitSigning": true,
+    "git.allowNoVerifyCommit": false,
+    "git.autoRepositoryDetection": true,
+
+    // =============================================================================
+    // Workbench Configuration
+    // =============================================================================
+    "workbench.editor.enablePreviewFromQuickOpen": false,
+    "workbench.editor.enablePreview": false,
+    "workbench.editor.closeOnFileDelete": true,
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.labelFormat": "short",
+    "workbench.editor.tabSizing": "shrink",
+    "workbench.sideBar.location": "right",
+    "workbench.panel.defaultLocation": "bottom",
+    "workbench.statusBar.visible": true,
+    "workbench.activityBar.visible": true,
+    "workbench.settings.editor": "json",
+    "workbench.startupEditor": "welcomePage",
+    "workbench.colorTheme": "Visual Studio Dark",
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.productIconTheme": "material-product-icons",
+
+    // =============================================================================
+    // Security Configuration
+    // =============================================================================
+    "security.workspace.trust.untrustedFiles": "open",
     "security.allowedUNCHosts": [
         "wsl.localhost"
     ],
+
+    // =============================================================================
+    // Extensions Configuration
+    // =============================================================================
+    "extensions.autoUpdate": true,
+    "extensions.autoCheckUpdates": true,
+    "extensions.ignoreRecommendations": false,
+
+    // =============================================================================
+    // Problems Panel
+    // =============================================================================
+    "problems.decorations.enabled": false,
+    "problems.showCurrentInStatus": true,
+
+    // =============================================================================
+    // Merge Conflicts
+    // =============================================================================
     "merge-conflict.autoNavigateNextConflict.enabled": true,
-    "workbench.settings.editor": "json",
+
+    // =============================================================================
+    // Diff Editor
+    // =============================================================================
+    "diffEditor.ignoreTrimWhitespace": false,
+    "diffEditor.renderSideBySide": true,
+    "diffEditor.codeLens": true,
+
+    // =============================================================================
+    // Color Customizations
+    // =============================================================================
     "workbench.colorCustomizations": {
         "editor.selectionBackground": "#6f42c1",
         "editorLineNumber.foreground": "#eeeeee91",
@@ -59,10 +225,5 @@
         "breadcrumb.activeSelectionForeground": "#00BCD4",
         "menu.selectionForeground": "#00BCD4",
         "menubar.selectionForeground": "#00BCD4"
-    },
-    "workbench.editor.enablePreviewFromQuickOpen": false,
-    "workbench.sideBar.location": "right",
-    "security.workspace.trust.untrustedFiles": "open",
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Visual Studio Dark"
+    }
 }
