prettier and stuff

--- a/vs-code/settings.json
+++ b/vs-code/settings.json
@@ -1,68 +1,66 @@
 {
-    "diffEditor.ignoreTrimWhitespace": false,
-    "editor.wordWrapColumn": 80,
-    "editor.cursorBlinking": "solid",
-    "editor.cursorSmoothCaretAnimation": "on",
-    "editor.detectIndentation": false,
-    "editor.fontSize": 16,
-    "editor.inlineSuggest.suppressSuggestions": true,
-    "editor.insertSpaces": false,
-    "editor.fontFamily": "Fira Code",
-    "editor.fontLigatures": true,
-    "editor.fontWeight": "500",
-    "editor.minimap.enabled": false,
-    "editor.renderWhitespace": "all",
-    "editor.tabSize": 4,
-    "explorer.autoReveal": false,
-    "explorer.compactFolders": false,
-    "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false,
-    "explorer.openEditors.visible": 1,
-    "files.associations": {
-        "*.component": "html",
-        "*.cls": "apex",
-        "*.page": "html",
-        "*.app": "xml",
-        "*.auradoc": "xml"
-    },
-    "files.exclude": {
-        "base64.js": true
-    },
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "problems.decorations.enabled": false,
-    "search.quickOpen.includeHistory": false,
-    "security.allowedUNCHosts": [
-        "wsl.localhost"
-    ],
-    "merge-conflict.autoNavigateNextConflict.enabled": true,
-    "workbench.settings.editor": "json",
-    "workbench.colorCustomizations": {
-        "editor.selectionBackground": "#6f42c1",
-        "editorLineNumber.foreground": "#eeeeee91",
-        "activityBarBadge.background": "#00BCD4",
-        "list.activeSelectionForeground": "#00BCD4",
-        "list.inactiveSelectionForeground": "#00BCD4",
-        "list.highlightForeground": "#00BCD4",
-        "scrollbarSlider.activeBackground": "#00BCD450",
-        "editorSuggestWidget.highlightForeground": "#00BCD4",
-        "textLink.foreground": "#00BCD4",
-        "progressBar.background": "#00BCD4",
-        "pickerGroup.foreground": "#00BCD4",
-        "tab.activeBorder": "#00BCD4",
-        "notificationLink.foreground": "#00BCD4",
-        "editorWidget.resizeBorder": "#00BCD4",
-        "editorWidget.border": "#00BCD4",
-        "settings.modifiedItemIndicator": "#00BCD4",
-        "settings.headerForeground": "#00BCD4",
-        "panelTitle.activeBorder": "#00BCD4",
-        "breadcrumb.activeSelectionForeground": "#00BCD4",
-        "menu.selectionForeground": "#00BCD4",
-        "menubar.selectionForeground": "#00BCD4"
-    },
-    "workbench.editor.enablePreviewFromQuickOpen": false,
-    "workbench.sideBar.location": "right",
-    "security.workspace.trust.untrustedFiles": "open",
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.colorTheme": "Visual Studio Dark"
+  "diffEditor.ignoreTrimWhitespace": false,
+  "editor.wordWrapColumn": 80,
+  "editor.cursorBlinking": "solid",
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.detectIndentation": false,
+  "editor.fontSize": 16,
+  "editor.inlineSuggest.suppressSuggestions": true,
+  "editor.insertSpaces": false,
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
+  "editor.fontWeight": "500",
+  "editor.minimap.enabled": false,
+  "editor.renderWhitespace": "all",
+  "editor.tabSize": 4,
+  "explorer.autoReveal": false,
+  "explorer.compactFolders": false,
+  "explorer.confirmDelete": false,
+  "explorer.confirmDragAndDrop": false,
+  "explorer.openEditors.visible": 1,
+  "files.associations": {
+    "*.component": "html",
+    "*.cls": "apex",
+    "*.page": "html",
+    "*.app": "xml",
+    "*.auradoc": "xml"
+  },
+  "files.exclude": {
+    "base64.js": true
+  },
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "problems.decorations.enabled": false,
+  "search.quickOpen.includeHistory": false,
+  "security.allowedUNCHosts": ["wsl.localhost"],
+  "merge-conflict.autoNavigateNextConflict.enabled": true,
+  "workbench.settings.editor": "json",
+  "workbench.colorCustomizations": {
+    "editor.selectionBackground": "#6f42c1",
+    "editorLineNumber.foreground": "#eeeeee91",
+    "activityBarBadge.background": "#00BCD4",
+    "list.activeSelectionForeground": "#00BCD4",
+    "list.inactiveSelectionForeground": "#00BCD4",
+    "list.highlightForeground": "#00BCD4",
+    "scrollbarSlider.activeBackground": "#00BCD450",
+    "editorSuggestWidget.highlightForeground": "#00BCD4",
+    "textLink.foreground": "#00BCD4",
+    "progressBar.background": "#00BCD4",
+    "pickerGroup.foreground": "#00BCD4",
+    "tab.activeBorder": "#00BCD4",
+    "notificationLink.foreground": "#00BCD4",
+    "editorWidget.resizeBorder": "#00BCD4",
+    "editorWidget.border": "#00BCD4",
+    "settings.modifiedItemIndicator": "#00BCD4",
+    "settings.headerForeground": "#00BCD4",
+    "panelTitle.activeBorder": "#00BCD4",
+    "breadcrumb.activeSelectionForeground": "#00BCD4",
+    "menu.selectionForeground": "#00BCD4",
+    "menubar.selectionForeground": "#00BCD4"
+  },
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.sideBar.location": "right",
+  "security.workspace.trust.untrustedFiles": "open",
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "Visual Studio Dark"
 }
